Gameplay v1, moved back to winning by getting opponent to 0 hp. Each round random selection of abilities, getting more powerful each round. Stat points given each round. New design of logic, used similar concept to unreal engine behavior tree. 26 total abilities, no more classes. Visuals migrated to pixijs. Organized ability creation pipeline. Added more conditionals related to directional infoand rotational info